# termray

./: .gitignore  Cargo.toml  Makefile  README.md
src/: main.rs  renderer.rs  terminal.rs
