[package]
name = "termray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
lazy_static = "1.4.0"
nalgebra = "0.32.2"
png = "0.17.8"
rand = "0.8.5"
rayon = "1.7.0"
tobj = { version = "4.0.0", features = ["use_f64"], default-features = false }
